--- a/index.html
+++ b/index.html
@@ -5,16 +5,122 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Boodschappenlijst Week</title>
 <style>
-  body { font-family: Arial, sans-serif; display: flex; padding: 20px; flex-wrap: wrap; }
-  .controls { flex: 1; max-width: 350px; margin-right: 20px; }
-  .shopping-list { flex: 2; background: #f7f7f7; padding: 20px; border-radius: 8px; min-width: 250px; }
-  input, button { width: 100%; margin-bottom: 10px; padding: 8px; font-size: 16px; box-sizing: border-box; }
-  h2 { margin-top: 0; }
-  .section { margin-bottom: 15px; }
-  label { font-weight: bold; display: block; margin-top: 10px; }
+  body {
+    font-family: 'Comic Sans MS', 'Arial', sans-serif;
+    background: #fff9f3;
+    margin: 0;
+    padding: 20px;
+    display: flex;
+    flex-wrap: wrap;
+    color: #333;
+  }
+
+  .hero {
+    width: 100%;
+    text-align: center;
+    margin-bottom: 25px;
+  }
+
+  .hero img {
+    width: 180px;
+    border-radius: 16px;
+  }
+
+  h1, h2, label, button, input {
+    border-radius: 10px;
+  }
+
+  h1 {
+    font-size: 26px;
+    margin-top: 10px;
+    color: #5b4937;
+  }
+
+  .controls, .shopping-list {
+    background: #ffffff;
+    padding: 20px;
+    border-radius: 20px;
+    box-shadow: 0 3px 10px rgba(0,0,0,0.08);
+  }
+
+  .controls {
+    flex: 1;
+    max-width: 350px;
+    margin-right: 20px;
+  }
+
+  .shopping-list {
+    flex: 2;
+    min-width: 250px;
+  }
+
+  input, button {
+    width: 100%;
+    margin-bottom: 10px;
+    padding: 10px 12px;
+    font-size: 16px;
+    box-sizing: border-box;
+    border: 2px solid #ffd4cf;
+    background: #fff3f1;
+    outline: none;
+    transition: 0.2s;
+  }
+
+  input:focus {
+    border-color: #ff8b7c;
+    background: #ffffff;
+  }
+
+  button {
+    background: #ff8b7c;
+    color: white;
+    font-weight: bold;
+    cursor: pointer;
+  }
+
+  button:hover {
+    background: #ff6a59;
+  }
+
+  .section {
+    margin-bottom: 15px;
+    padding: 10px;
+    background: #fff3f1;
+    border-radius: 12px;
+  }
+
+  strong {
+    color: #5b4937;
+    font-size: 18px;
+  }
+
+  ul {
+    padding-left: 20px;
+    margin: 5px 0 0;
+  }
+
+  li {
+    margin: 3px 0;
+  }
+
+  @media (max-width: 768px) {
+    body {
+      flex-direction: column;
+    }
+    .controls {
+      max-width: 100%;
+      margin-right: 0;
+      margin-bottom: 20px;
+    }
+  }
 </style>
 </head>
 <body>
+
+<header class="hero">
+  <img src="picture.jpg" alt="Koppel illustratie">
+  <h1>Boodschappen Weekplanner</h1>
+</header>
 
 <div class="controls">
   <h2>Selecteer recepten per dag</h2>
@@ -165,22 +271,19 @@ const recipes = {
   ]
 };
 
-// Populate dropdowns with "Geen" default
+// Populate dropdowns
 const days = ["day1","day2","day3","day4","day5","day6","day7"];
 const recipeNames = Object.keys(recipes);
 
-// Populate datalists for mobile-friendly searchable dropdowns
 days.forEach(day => {
   const dataList = document.getElementById(day + "List");
 
-  // Voeg recepten toe aan datalist
   recipeNames.forEach(r => {
     const option = document.createElement("option");
     option.value = r;
     dataList.appendChild(option);
   });
 
-  // Laat input leeg (geen visuele "Geen")
   document.getElementById(day).value = "";
 });
 
@@ -188,13 +291,13 @@ days.forEach(day => {
 document.getElementById("generate").addEventListener("click", () => {
   const selected = days.map(d => {
     const val = document.getElementById(d).value.trim();
-    return val === "" ? "Geen" : val; // Als leeg, default naar "Geen"
+    return val === "" ? "Geen" : val;
   });
 
   const aggregated = {};
 
   selected.forEach(r => {
-    if(r === "Geen") return; // skip "Geen"
+    if(r === "Geen") return;
     recipes[r].forEach(item => {
       const key = item.name + " (" + item.unit + ")";
       if (!aggregated[item.category]) aggregated[item.category] = {};
@@ -209,12 +312,3 @@ document.getElementById("generate").addEventListener("click", () => {
     Object.keys(aggregated[category]).forEach(i => {
       html += `<li>${i.split(" (")[0]}: ${aggregated[category][i]} ${i.match(/\((.*)\)/)[1]}</li>`;
     });
-    html += `</ul></div>`;
-  });
-
-  document.getElementById("list").innerHTML = html;
-});
-</script>
-
-</body>
-</html>
