--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@ const recipes = {
   ],
   "Tex-mex eenpanswok met gehakt en aardappel": [
     {name: "Rundergehakt", amount: 500, unit: "g", category: "Vlees/Vis"},
-    {name: "Aardappelen", amount: 600, unit: "g", category: "Groenten"},
+    {name: "Aardappelschijfjes", amount: 600, unit: "g", category: "Groenten"},
     {name: "Mexicaanse roerbakgroenten", amount: 800, unit: "g", category: "Groenten"},
     {name: "Cheddar", amount: 150, unit: "g", category: "Zuivel"},
     {name: "Zure room", amount: 125, unit: "g", category: "Zuivel"},
@@ -318,7 +318,7 @@ const recipes = {
   "Prei schotel": [
     {name: "Prei", amount: 500, unit: "g", category: "Groenten"},
     {name: "Rode paprika", amount: 1, unit: "stuk", category: "Groenten"},
-    {name: "Aardappelen", amount: 600, unit: "g", category: "Groenten"},
+    {name: "Aardappelschijfjes", amount: 600, unit: "g", category: "Groenten"},
     {name: "Rundergehakt", amount: 300, unit: "g", category: "Vlees/Vis"},
     {name: "Ei", amount: 1, unit: "stuk", category: "Overig"},
     {name: "Kookroom", amount: 125, unit: "ml", category: "Zuivel"},
